[tool]
[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = [
    "pylint",
    "black>=22.3.0",
    "radon>=5.1.0",
]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
requires-python = ">=3.10"
dependencies = []
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
